# xmlai

./: .gitignore  README.md
.github/workflows/: ruff.yml
docs/: README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  theme.config.tsx  tsconfig.json
docs/components/: Code.tsx
docs/components/ui/: select.tsx
docs/pages/: _app.mdx  _meta.json  basics.mdx  index.mdx  llm.mdx
python/: README.md  main.py  pyproject.toml  setup.py
python/src/xmlai/: __init__.py  llm.py
python/tests/: test_basics.py
ts/: LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
ts/src/: index.test.ts  index.ts  llm.test.ts  llm.ts
