
# from setuptools import setup

# setup(
#     name="xmlai",
#     version="0.0.1",
#     packages=["xmlai"],
#     install_requires=[],
# )

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xmlai"
version = "0.0.1"
authors = [
  { name="Raunak Chowdhuri", email="raunak@oloren.ai" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sauhaardac/xmlai"
"Bug Tracker" = "https://github.com/sauhaardac/xmlai/issues"

[tool.ruff]
line-length = 120

[too.black]
line-length = 120